Implement property-form validation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,3 @@
 property.name.empty=Nem adott meg ingatlan nevet.
+property.price.notpositive=Kikiáltási szám csak pozitív szám lehet.
+property.rooms.notpositive=Szobák száma csak pozitív szám lehet.
