Little change in service class on Frontend size.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,5 @@
 property.name.empty=Nem adott meg ingatlan nevet.
 property.name.notproperlength=Ingatlan neve 1 és 60 karakter között lehet.
 property.price.notpositive=Kikiáltási szám csak pozitív egész szám lehet.
-property.rooms.notpositive=Szobák száma csak pozitív szám lehet és maximum 12 szoba engedelyezett.
+property.rooms.notpositive=Szobák száma csak pozitív szám lehet és maximum 12 szoba engedélyezett.
 property.description.empty=Irjon rövid legalább 10 karakteres leírást.
