--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,3 +3,9 @@ property.name.notproperlength=Ingatlan neve 1 és 60 karakter között lehet.
 property.price.notpositive=Kikiáltási szám csak pozitív egész szám lehet.
 property.rooms.notpositive=Szobák száma csak pozitív szám lehet és maximum 12 szoba engedélyezett.
 property.description.empty=Irjon rövid legalább 10 karakteres leírást.
+newUser.userName.empty=Nem adott meg felhasználónevet.
+newUser.userName.notproperlength=A felhasználónév min. 2 és max. 30 karakter lehet.
+newUser.mail.empty=Nem adott meg email-címet.
+newUser.mail.notvalid=Érvénytelen email-cím.
+newUser.password.empty=Nem adott meg jelszót.
+newUser.password.notvalid=A jelszó tartalmazzon legalább egy nagybetűt, egy kisbetűt, egy számot és minimum 6 karakter legyen.
